--- a/cricket.html
+++ b/cricket.html
@@ -11,11 +11,11 @@
 
       .field:hover .bat {
         transform: rotate(-60deg);
-        transform-origin: top right;
+        transform-origin: 70% 0;
       }
 
       .field:hover .ball {
-        transform: translate(500px);
+        transform: translate(960px, -100px);
       }
 
       .ball {
@@ -24,10 +24,10 @@
         background-color: red;
         border-radius: 20px;
         position: relative;
-        left: 435px;
+        left: 395px;
         transition: transform 1s ease-out 0.5s;
+        bottom: 50px;
       }
-
       .bat {
         transition: transform 0.5s ease-in;
       }
